Update Garbage Collection & Memory Management.md